--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ The `flexCausal` R package enables estimation of Average Causal Effects (ACE) fo
 >
 >- Treatment and outcome specifications
 >
->- ADMG (acyclic directed mixed graph), a projection of directed acyclic graphs (DAG) with latent variables. This can be based on expert knowledge, causal discovery methods, or a combination of both.
+>- ADMG (acyclic directed mixed graph), projection of a directed acyclic graphs (DAG) with latent variables. This can be based on expert knowledge, causal discovery methods, or a combination of both.
 
   
   
@@ -43,8 +43,19 @@ Here's a schematic view of what `flexCausal` is capable of and how it works:
 
 
 
-If you find this package useful, please cite: [this paper](http://www.arxiv.org/pdf/2409.03962)
+If you find this package useful, please consider cite: [this paper](http://www.arxiv.org/pdf/2409.03962){target="_blank"}
 ```{r, eval=FALSE, citation}
+@article{guo2024average,
+  title={Average Causal Effect Estimation in DAGs with Hidden Variables: Extensions of Back-Door and Front-Door Criteria},
+  author={Guo, Anna and Nabi, Razieh},
+  journal={arXiv preprint arXiv:2409.03962},
+  year={2024}
+}
+```
+
+[This paper](https://arxiv.org/pdf/2312.10234){target="_blank"} is highly relevant as well, which offers estimation strategy for ACE under the front-door model, a special case of the graphical models considered in `flexCausal`.
+
+```{r, eval=FALSE, citation_frontdoor}
 @article{guo2024average,
   title={Average Causal Effect Estimation in DAGs with Hidden Variables: Extensions of Back-Door and Front-Door Criteria},
   author={Guo, Anna and Nabi, Razieh},
