--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ The `flexCausal` R package enables estimation of Average Causal Effects (ACE) fo
 >
 >- Treatment and outcome specifications
 >
->- ADMG (acyclic directed mixed graph), projection of a directed acyclic graphs (DAG) with latent variables. This can be based on expert knowledge, causal discovery methods, or a combination of both.
+>- ADMG (acyclic directed mixed graph), projection of a directed acyclic graph (DAG) with latent variables. This can be based on expert knowledge, causal discovery methods, or a combination of both.
 
   
   
