--- a/README.Rmd
+++ b/README.Rmd
@@ -56,11 +56,11 @@ If you find this package useful, please consider cite: [this paper](http://www.a
 [This paper](https://arxiv.org/pdf/2312.10234){target="_blank"} is highly relevant as well, which offers estimation strategy for ACE under the front-door model, a special case of the graphical models considered in `flexCausal`.
 
 ```{r, eval=FALSE, citation_frontdoor}
-@article{guo2024average,
-  title={Average Causal Effect Estimation in DAGs with Hidden Variables: Extensions of Back-Door and Front-Door Criteria},
-  author={Guo, Anna and Nabi, Razieh},
-  journal={arXiv preprint arXiv:2409.03962},
-  year={2024}
+@article{guo2023targeted,
+  title={Targeted Machine Learning for Average Causal Effect Estimation Using the Front-Door Functional},
+  author={Guo, Anna and Benkeser, David and Nabi, Razieh},
+  journal={arXiv preprint arXiv:2312.10234},
+  year={2023}
 }
 ```
 
